Fixes spacing inside of game card to be more comfortable at the edges

--- a/src/index.css
+++ b/src/index.css
@@ -370,7 +370,7 @@ html, #root {
     "gc-mechanics"
     "gc-footer";
   margin: 2px;
-  padding: 0.5rem;
+  padding: 0.75rem;
   width: 200px;
   max-width: 275px;
   min-width: 175px;
@@ -699,7 +699,7 @@ button:enabled,
     min-height: 175px;
     min-width: 100%;
     grid-template-rows: 1.5rem 1.5rem auto 2rem;
-    grid-template-columns: 200px 1fr 1fr auto 75px;
+    grid-template-columns: 175px 1fr 1fr auto 75px;
     grid-template-areas:
       "gc-visual gc-title gc-title gc-title gc-header"
       "gc-visual gc-weight gc-weight gc-weight gc-weight"
@@ -712,7 +712,7 @@ button:enabled,
     min-height: 450px;
     min-width: 100%;
     grid-template-rows: 1.5rem 3rem auto 2rem;
-    grid-template-columns: 200px 1fr 1fr auto 75px;
+    grid-template-columns: 175px 1fr 1fr auto 75px;
     grid-template-areas:
       "gc-visual gc-title gc-title gc-title gc-header"
       "gc-visual gc-selector gc-selector gc-selector gc-selector"
